setup focus view with camera_id

--- a/indi_allsky/flask/templates/focus.html
+++ b/indi_allsky/flask/templates/focus.html
@@ -19,6 +19,7 @@ var json_data = {
 };
 var focuser_device = {{ focuser_device }};
 var focus_data = [];
+var camera_id = {{ camera_id }};
 var refreshInterval = 5000;
 var zoom = 2;  // 2 is no zoom
 var blur_score = 0.0
