add CAMERA_ID for filter detections

--- a/indi_allsky/flask/templates/imageviewer.html
+++ b/indi_allsky/flask/templates/imageviewer.html
@@ -525,6 +525,7 @@ $("#FILTER_DETECTIONS").on("change", function() {
     $("#loader_filter").css({'display' : 'block'});
 
     var json_data = {
+        'CAMERA_ID'          : fields["CAMERA_ID"].input.val(),
         'FILTER_DETECTIONS'  : fields["FILTER_DETECTIONS"].input.prop("checked"),
     };
 
