--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -1116,7 +1116,7 @@ var camera_id = {{ camera_id }};
         <div class="col-sm-5">
             <div>Directory to store timelapse images</div>
             <div>Default: /var/www/html/allsky/images</div>
-            <div>If you change this setting, please re-run setup.sh to update the web server config</div>
+            <div><span class="badge rounded-pill bg-warning text-dark">Warning</span> If you change this setting, please re-run setup.sh to update the web server config</div>
         </div>
     </div>
 
@@ -1300,7 +1300,7 @@ var camera_id = {{ camera_id }};
         </div>
         <div class="col-sm-6">
             <div>ffmpeg extra options (not validated).</div>
-            <div>Example:<pre>-level 3.1</pre></div>
+            <div><span class="badge rounded-pill bg-info text-dark">Note</span> "-level 3.1" can reduce artifacts and increase IOS compatibility</div>
         </div>
     </div>
 
