--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -688,6 +688,20 @@ var camera_id = {{ camera_id }};
 
     <div class="form-group row">
         <div class="col-sm-2">
+            {{ form_config.DAYTIME_CAPTURE_SAVE.label }}
+        </div>
+        <div class="col-sm-2">
+            <div class="form-switch">
+                {{ form_config.DAYTIME_CAPTURE_SAVE(class='form-check-input') }}
+                <div id="DAYTIME_CAPTURE_SAVE-error" class="invalid-feedback text-danger" style="display: none;"></div>
+            </div>
+        </div>
+        <div class="col-sm-8">
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
             {{ form_config.DAYTIME_TIMELAPSE.label }}
         </div>
         <div class="col-sm-2">
@@ -5730,6 +5744,7 @@ const checkbox_field_names = [
     'DETECT_DRAW',
     'TIMELAPSE_ENABLE',
     'DAYTIME_CAPTURE',
+    'DAYTIME_CAPTURE_SAVE',
     'DAYTIME_TIMELAPSE',
     'DAYTIME_CONTRAST_ENHANCE',
     'NIGHT_CONTRAST_ENHANCE',
