update daytime image config logic

--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -5913,6 +5913,26 @@ $('#form_config').on('submit', function() {
 // Daytime timelapse
 $('#DAYTIME_CAPTURE').on('change', function() {
     if ($('#DAYTIME_CAPTURE').prop('checked')) {
+        $('#DAYTIME_CAPTURE_SAVE').prop('checked', true);
+        $('#DAYTIME_CAPTURE_SAVE').removeAttr('readonly');
+        $('#DAYTIME_CAPTURE_SAVE').removeAttr('disabled');
+
+        $('#DAYTIME_TIMELAPSE').prop('checked', true);
+        $('#DAYTIME_TIMELAPSE').removeAttr('readonly');
+        $('#DAYTIME_TIMELAPSE').removeAttr('disabled');
+    } else {
+        $('#DAYTIME_CAPTURE_SAVE').prop('checked', false);
+        $('#DAYTIME_CAPTURE_SAVE').attr('readonly', true);
+        $('#DAYTIME_CAPTURE_SAVE').attr('disabled', true);
+
+        $('#DAYTIME_TIMELAPSE').prop('checked', false);
+        $('#DAYTIME_TIMELAPSE').attr('readonly', true);
+        $('#DAYTIME_TIMELAPSE').attr('disabled', true);
+    }
+});
+
+$('#DAYTIME_CAPTURE_SAVE').on('change', function() {
+    if ($('#DAYTIME_CAPTURE_SAVE').prop('checked')) {
         $('#DAYTIME_TIMELAPSE').prop('checked', true);
         $('#DAYTIME_TIMELAPSE').removeAttr('readonly');
         $('#DAYTIME_TIMELAPSE').removeAttr('disabled');
@@ -6003,6 +6023,20 @@ $('#CARDINAL_DIRS__ENABLE').on('change', function() {
 $( document ).ready(function() {
     // Daytime timelapse
     if ($('#DAYTIME_CAPTURE').prop('checked')) {
+        $('#DAYTIME_CAPTURE_SAVE').removeAttr('readonly');
+        $('#DAYTIME_CAPTURE_SAVE').removeAttr('disabled');
+
+        $('#DAYTIME_TIMELAPSE').removeAttr('readonly');
+        $('#DAYTIME_TIMELAPSE').removeAttr('disabled');
+    } else {
+        $('#DAYTIME_CAPTURE_SAVE').attr('readonly', true);
+        $('#DAYTIME_CAPTURE_SAVE').attr('disabled', true);
+
+        $('#DAYTIME_TIMELAPSE').attr('readonly', true);
+        $('#DAYTIME_TIMELAPSE').attr('disabled', true);
+    }
+
+    if ($('#DAYTIME_CAPTURE_SAVE').prop('checked')) {
         $('#DAYTIME_TIMELAPSE').removeAttr('readonly');
         $('#DAYTIME_TIMELAPSE').removeAttr('disabled');
     } else {
