setup for dynamic status updates

--- a/indi_allsky/flask/templates/base.html
+++ b/indi_allsky/flask/templates/base.html
@@ -168,8 +168,7 @@
 
                 <div class="py-sm-4 mt-sm-auto ms-auto ms-sm-0 flex-shrink-1 d-none d-sm-inline">
                     <hr>
-                    <div>{{ status_text|safe }}</div>
-                    <div>{{ web_extra_text|safe }}</div>
+                    <div id="status_text">{{ status_text|safe }}</div>
                     <hr>
                     <div>{{ username_text|safe }}</div>
                 </div>
