remove log message

--- a/indi_allsky/flask/templates/index.html
+++ b/indi_allsky/flask/templates/index.html
@@ -30,7 +30,7 @@ function init() {
 }
 
 async function loop() {
-    console.log('Starting loop');
+    //console.log('Starting loop');
 
     while(json_data['latest_image']['url'] == null) {
         await sleep(100);
