update config instructions

--- a/indi_allsky/flask/templates/imageprocessing.html
+++ b/indi_allsky/flask/templates/imageprocessing.html
@@ -322,7 +322,7 @@ var fullscreen = false;  //initial state
             <div id="IMAGE_STRETCH__MODE1_MIDTONES-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
         <div class="col-sm-8">
-            <div></div>
+            <div>Values less than 0.5 enhances midtones, greater than 0.5 darkens midtones (0.5 results in the original image)</div>
         </div>
     </div>
 
