--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -968,7 +968,7 @@ var camera_id = {{ camera_id }};
             <div id="IMAGE_STRETCH__MODE2_MIDTONES-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
         <div class="col-sm-8">
-            <div></div>
+            <div>Values less than 0.5 enhances midtones, greater than 0.5 darkens midtones (0.5 results in the original image)</div>
         </div>
     </div>
 
