--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -955,7 +955,7 @@ var camera_id = {{ camera_id }};
             <div id="IMAGE_STRETCH__MODE2_SHADOWS-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
         <div class="col-sm-8">
-            <div>Default 0.0</div>
+            <div>Default 0.0 - With 0.03 this gives a nice subtle effect</div>
         </div>
     </div>
 
@@ -969,6 +969,7 @@ var camera_id = {{ camera_id }};
         </div>
         <div class="col-sm-8">
             <div>Values less than 0.5 enhances midtones, greater than 0.5 darkens midtones (0.5 results in the original image)</div>
+            <div>0.25 - 0.35 are good values to start</div>
         </div>
     </div>
 
