--- a/indi_allsky/flask/templates/imageprocessing.html
+++ b/indi_allsky/flask/templates/imageprocessing.html
@@ -309,7 +309,7 @@ var fullscreen = false;  //initial state
             <div id="IMAGE_STRETCH__MODE1_SHADOWS-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
         <div class="col-sm-8">
-            <div>Default: 0.0</div>
+            <div>Default 0.0 - With 0.03 this gives a nice subtle effect</div>
         </div>
     </div>
 
@@ -323,6 +323,7 @@ var fullscreen = false;  //initial state
         </div>
         <div class="col-sm-8">
             <div>Values less than 0.5 enhances midtones, greater than 0.5 darkens midtones (0.5 results in the original image)</div>
+            <div>0.25 - 0.35 are good values to start</div>
         </div>
     </div>
 
@@ -335,7 +336,7 @@ var fullscreen = false;  //initial state
             <div id="IMAGE_STRETCH__MODE1_HIGHLIGHTS-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
         <div class="col-sm-8">
-            <div>Default: 1.0</div>
+            <div>Default 1.0 - It is recommended not to adjust this setting</div>
         </div>
     </div>
 
