add info for CLI scripts

--- a/indi_allsky/flask/templates/system.html
+++ b/indi_allsky/flask/templates/system.html
@@ -638,7 +638,7 @@ $('#form_settime').on('submit', function() {
 
 <div class="row">
     <div class="col-sm-2"></div>
-    <div class="col-sm-2">Validate DB Entries</div>
+    <div class="col-sm-2">Validate DB Entries<br><div style="font-size:10px">CLI: ./misc/validate_db_entries.py</div></div>
     <div class="col-sm-2">
         <input class="form-check-input" id="VALIDATE_DB_CONFIRM" name="VALIDATE_DB_CONFIRM" type="checkbox" value="y"> Confirm
     </div>
@@ -662,7 +662,7 @@ $('#form_settime').on('submit', function() {
 
 <div class="row">
     <div class="col-sm-2"></div>
-    <div class="col-sm-2">Flush Images</div>
+    <div class="col-sm-2">Flush Images<br><div style="font-size:10px">CLI: ./misc/flush_images.py</div></div>
     <div class="col-sm-2">
         <input class="form-check-input" id="FLUSH_IMAGES_CONFIRM1" name="FLUSH_IMAGES_CONFIRM1" type="checkbox" value="y"> Confirm 1
     </div>
@@ -678,7 +678,7 @@ $('#form_settime').on('submit', function() {
 
 <div class="row">
     <div class="col-sm-2"></div>
-    <div class="col-sm-2">Flush Timelapses, Keograms, Startrails</div>
+    <div class="col-sm-2">Flush Timelapses, Keograms, Startrails<br><div style="font-size:10px">CLI: ./misc/flush_images.py</div></div>
     <div class="col-sm-2">
         <input class="form-check-input" id="FLUSH_TIMELAPSES_CONFIRM1" name="FLUSH_TIMELAPSES_CONFIRM1" type="checkbox" value="y"> Confirm 1
     </div>
