add LTR390 gain config

--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -4884,6 +4884,34 @@ var camera_id = {{ camera_id }};
 
     <div class="form-group row">
         <div class="col-sm-2">
+            {{ form_config.TEMP_SENSOR__LTR390_GAIN_NIGHT.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-4">
+            {{ form_config.TEMP_SENSOR__LTR390_GAIN_NIGHT(class='form-select bg-secondary') }}
+            <div id="TEMP_SENSOR__LTR390_GAIN_NIGHT-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-6">
+            <div></div>
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.TEMP_SENSOR__LTR390_GAIN_DAY.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-4">
+            {{ form_config.TEMP_SENSOR__LTR390_GAIN_DAY(class='form-select bg-secondary') }}
+            <div id="TEMP_SENSOR__LTR390_GAIN_DAY-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-6">
+            <div></div>
+        </div>
+    </div>
+
+    <hr>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
             {{ form_config.TEMP_SENSOR__MQTT_HOST.label(class='col-form-label') }}
         </div>
         <div class="col-sm-4">
@@ -5833,6 +5861,8 @@ const field_names = [
     'TEMP_SENSOR__SI1145_VIS_GAIN_DAY',
     'TEMP_SENSOR__SI1145_IR_GAIN_NIGHT',
     'TEMP_SENSOR__SI1145_IR_GAIN_DAY',
+    'TEMP_SENSOR__LTR390_GAIN_NIGHT',
+    'TEMP_SENSOR__LTR390_GAIN_DAY',
     'INDI_CONFIG_DEFAULTS',
     'INDI_CONFIG_DAY',
     'CONFIG_NOTE',
