--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -5499,6 +5499,19 @@ var camera_id = {{ camera_id }};
 
     <div class="form-group row">
         <div class="col-sm-2">
+            {{ form_config.ADSB__ENABLE.label }}
+        </div>
+        <div class="col-sm-2">
+            <div class="form-switch">
+                {{ form_config.ADSB__ENABLE(class='form-check-input') }}
+                <div id="ADSB__ENABLE-error" class="invalid-feedback text-danger" style="display: none;"></div>
+            </div>
+        </div>
+        <div class="col-sm-8">Enable ADS-B aircraft tracking</div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
             {{ form_config.ADSB__DUMP1090_URL.label(class='col-form-label') }}
         </div>
         <div class="col-sm-6">
@@ -5514,22 +5527,22 @@ var camera_id = {{ camera_id }};
         <div class="col-sm-2">
             {{ form_config.ADSB__USERNAME.label(class='col-form-label') }}
         </div>
-        <div class="col-sm-4">
+        <div class="col-sm-3">
             {{ form_config.ADSB__USERNAME(class='form-control bg-secondary') }}
             <div id="ADSB__USERNAME-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
-        <div class="col-sm-6">HTTP Username</div>
+        <div class="col-sm-7">HTTP Username</div>
     </div>
 
     <div class="form-group row">
         <div class="col-sm-2">
             {{ form_config.ADSB__PASSWORD.label(class='col-form-label') }}
         </div>
-        <div class="col-sm-4">
+        <div class="col-sm-3">
             {{ form_config.ADSB__PASSWORD(class='form-control bg-secondary') }}
             <div id="ADSB__PASSWORD-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
-        <div class="col-sm-6">HTTP Password</div>
+        <div class="col-sm-7">HTTP Password</div>
     </div>
 
     <div class="form-group row">
@@ -6018,6 +6031,7 @@ const checkbox_field_names = [
     'FAN__INVERT_OUTPUT',
     'FAN__THOLD_ENABLE',
     'GENERIC_GPIO__A_INVERT_OUTPUT',
+    'ADSB__ENABLE',
     'ADSB__CERT_BYPASS',
     'WEB_NONLOCAL_IMAGES',
     'WEB_LOCAL_IMAGES_ADMIN',
