--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -5558,6 +5558,19 @@ var camera_id = {{ camera_id }};
         <div class="col-sm-8">Bypass certificate validation</div>
     </div>
 
+    <hr>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.ADSB__ALT_DEG_MIN.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-2">
+            {{ form_config.ADSB__ALT_DEG_MIN(class='form-control bg-secondary') }}
+            <div id="ADSB__ALT_DEG_MIN-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-8">Minimum visual altitude of aircraft in degrees</div>
+    </div>
+
 </div><!-- end adsb tab -->
 
 </div>
@@ -5933,6 +5946,7 @@ const field_names = [
     'ADSB__DUMP1090_URL',
     'ADSB__USERNAME',
     'ADSB__PASSWORD',
+    'ADSB__ALT_DEG_MIN',
     'INDI_CONFIG_DEFAULTS',
     'INDI_CONFIG_DAY',
     'CONFIG_NOTE',
