add aircraft label config options

--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -5571,6 +5571,56 @@ var camera_id = {{ camera_id }};
         <div class="col-sm-8">Minimum visual altitude of aircraft in degrees</div>
     </div>
 
+    <hr>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.ADSB__LABEL_ENABLE.label }}
+        </div>
+        <div class="col-sm-2">
+            <div class="form-switch">
+                {{ form_config.ADSB__LABEL_ENABLE(class='form-check-input') }}
+                <div id="ADSB__LABEL_ENABLE-error" class="invalid-feedback text-danger" style="display: none;"></div>
+            </div>
+        </div>
+        <div class="col-sm-8"></div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.ADSB__LABEL_LIMIT.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-2">
+            {{ form_config.ADSB__LABEL_LIMIT(class='form-control bg-secondary') }}
+            <div id="ADSB__LABEL_LIMIT-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-8">Limit number of aircraft to label on image</div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.ADSB__AIRCRAFT_LABEL_TEMPLATE.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-4">
+            {{ form_config.ADSB__AIRCRAFT_LABEL_TEMPLATE(class='form-control bg-secondary') }}
+            <div id="ADSB__AIRCRAFT_LABEL_TEMPLATE-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-6"></div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.ADSB__IMAGE_LABEL_TEMPLATE_PREFIX.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-6">
+            {{ form_config.ADSB__IMAGE_LABEL_TEMPLATE_PREFIX(class='form-control bg-secondary', rows='10') }}
+            <div id="ADSB__IMAGE_LABEL_TEMPLATE_PREFIX-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-4">
+            <div></div>
+        </div>
+    </div>
+
 </div><!-- end adsb tab -->
 
 </div>
@@ -5947,6 +5997,9 @@ const field_names = [
     'ADSB__USERNAME',
     'ADSB__PASSWORD',
     'ADSB__ALT_DEG_MIN',
+    'ADSB__LABEL_LIMIT',
+    'ADSB__AIRCRAFT_LABEL_TEMPLATE',
+    'ADSB__IMAGE_LABEL_TEMPLATE_PREFIX',
     'INDI_CONFIG_DEFAULTS',
     'INDI_CONFIG_DAY',
     'CONFIG_NOTE',
@@ -6047,6 +6100,7 @@ const checkbox_field_names = [
     'GENERIC_GPIO__A_INVERT_OUTPUT',
     'ADSB__ENABLE',
     'ADSB__CERT_BYPASS',
+    'ADSB__LABEL_ENABLE',
     'WEB_NONLOCAL_IMAGES',
     'WEB_LOCAL_IMAGES_ADMIN',
     'RELOAD_ON_SAVE',
