add link to ADS-B wiki

--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -5507,7 +5507,9 @@ var camera_id = {{ camera_id }};
                 <div id="ADSB__ENABLE-error" class="invalid-feedback text-danger" style="display: none;"></div>
             </div>
         </div>
-        <div class="col-sm-8">Enable ADS-B aircraft tracking</div>
+        <div class="col-sm-8">
+            <div><a href="https://github.com/aaronwmorris/indi-allsky/wiki/ADS%E2%80%90B-Aircraft-Tracking" class="text-decoration-none link-info" target="_blank">ADS-B Aircraft Tracking Wiki</a></div>
+        </div>
     </div>
 
     <div class="form-group row">
