add satellite tracking wiki link

--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -5640,7 +5640,7 @@ var camera_id = {{ camera_id }};
             </div>
         </div>
         <div class="col-sm-8">
-            <div></div>
+            <div><a href="https://github.com/aaronwmorris/indi-allsky/wiki/Satellite-Tracking" class="text-decoration-none link-info" target="_blank">Satellite Tracking Wiki</a></div>
         </div>
     </div>
 
