add link to MQTT wiki

--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -3642,7 +3642,9 @@ var camera_id = {{ camera_id }};
                 <div id="MQTTPUBLISH__ENABLE-error" class="invalid-feedback text-danger" style="display: none;"></div>
             </div>
         </div>
-        <div class="col-sm-8">Enable MQTT Publishing</div>
+        <div class="col-sm-8">
+            <div><a href="https://github.com/aaronwmorris/indi-allsky/wiki/MQTT-Broker-Publishing" class="text-decoration-none link-info" target="_blank">MQTT Broker Publishing Wiki</a></div>
+        </div>
     </div>
 
     <div class="form-group row">
