--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -726,7 +726,7 @@ var camera_id = {{ camera_id }};
                 <div id="CAPTURE_PAUSE-error" class="invalid-feedback text-danger" style="display: none;"></div>
             </div>
         </div>
-        <div class="col-sm-8">Pause image capture</div>
+        <div class="col-sm-8">Pause image capture - Allows capture program to run without taking images</div>
     </div>
 
     <hr>
