--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -756,7 +756,24 @@ var camera_id = {{ camera_id }};
                 <div id="IMAGE_CALIBRATE_DARK-error" class="invalid-feedback text-danger" style="display: none;"></div>
             </div>
         </div>
-        <div class="col-sm-8">Disable if you want to include hot pixels your final image</div>
+        <div class="col-sm-8">
+            <div>Disable if you want to include hot pixels your final image</div>
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.IMAGE_CALIBRATE_BPM.label }}
+        </div>
+        <div class="col-sm-2">
+            <div class="form-switch">
+                {{ form_config.IMAGE_CALIBRATE_BPM(class='form-check-input') }}
+                <div id="IMAGE_CALIBRATE_BPM-error" class="invalid-feedback text-danger" style="display: none;"></div>
+            </div>
+        </div>
+        <div class="col-sm-8">
+            <div>Normally disabled - Enable if you have problems with pulsing pixels</div>
+        </div>
     </div>
 
     <hr>
@@ -6168,6 +6185,7 @@ const checkbox_field_names = [
     'IMAGE_STACK_ALIGN',
     'IMAGE_STACK_SPLIT',
     'IMAGE_CALIBRATE_DARK',
+    'IMAGE_CALIBRATE_BPM',
     'IMAGE_SAVE_FITS_PRE_DARK',
     'THUMBNAILS__IMAGES_AUTO',
     'NIGHT_GRAYSCALE',
