--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -2936,7 +2936,7 @@ var camera_id = {{ camera_id }};
             <div id="IMAGE_EXPIRE_DAYS-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
         <div class="col-sm-8">
-            <div>Maximum age of original image files before deletion</div>
+            <div>Maximum age of original image files before deletion.  Affects timelapse and panorama images</div>
         </div>
     </div>
 
