add alt names to camera info

--- a/indi_allsky/flask/templates/cameraLens.html
+++ b/indi_allsky/flask/templates/cameraLens.html
@@ -21,6 +21,21 @@ var camera_id = {{ camera_id }};
     </div>
 
     <div class="row">
+        <div class="col-2">Name Alt 1</div>
+        <div class="col-4">{{ camera.name_alt1 }}</div>
+    </div>
+
+    <div class="row">
+        <div class="col-2">Name Alt 2</div>
+        <div class="col-4">{{ camera.name_alt2 }}</div>
+    </div>
+
+    <div class="row">
+        <div class="col-2">Friendly Name</div>
+        <div class="col-4">{{ camera.friendlyName }}</div>
+    </div>
+
+    <div class="row">
         <div class="col-2">UUID</div>
         <div class="col-4">{{ camera.uuid }}</div>
     </div>
